crates/runtime/tests/search/snapshots/integration_models__search__arrow-no_vector_engine-dataset-hybrid_multiple_column_megascience_vector_search_sql_projection.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, question, subject, trunc(_score, 3) as _score FROM vector_search(qs, 'second', answer) order by _score desc, id LIMIT 4"
---
"HTTP error: 400 Bad Request - Failed to execute query: Error during planning: User function 'vector_search' is called on table 'spice.public.qs' that does not have an embedding index on 'answer' column. Indexed column(s): question."
